--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,4 @@
+/* Start of CSS */
 body {
   font-family: 'Rubik', sans-serif;
 }
@@ -15,3 +16,4 @@ h6 {
   font-weight: 300;
   font-style: italic;
 }
+/* End of CSS */
